--- a/semiclassics_vs_exact.ipynb
+++ b/semiclassics_vs_exact.ipynb
@@ -13,12 +13,31 @@
     "The Hamiltonian to be tackled reads\n",
     "\n",
     "\\begin{equation}\n",
-    "H=\\left(\\Delta -\\frac{p_x^2-\\left[p_y-eB\\hat{z}\\right]^2}{2m} \\right)\\sigma_x+v\\hat{p}_z\\sigma_z\n",
+    "H=\\left(\\Delta -\\frac{p_x^2+\\left[p_y-eB\\hat{z}\\right]^2}{2m} \\right)\\sigma_x+v\\hat{p}_z\\sigma_z\n",
     "\\end{equation}\n",
     "\n",
-    "$p_y$ constitutes a shift and as sutch the spectrum will not depend on it,\n",
-    "while momentum in the $x$ direction commutes with the hamiltonian and \n",
+    "The $x$ direction commutes with the hamiltonian thus $p_x$ is a good quantum number, similarly \n",
+    "$p_y$, which constitutes a shift and as such the spectrum will not depend on it,\n",
+    "\n",
     "The above equation can be brought to the dimensionless form \n",
+    "\\begin{equation}\n",
+    "H=E_0\\left [\\left(\\alpha-\\hat{\\lambda}^2 \\right)\\sigma_x+\\hat{p}_\\lambda\\sigma_z\\right ]\n",
+    "\\end{equation}\n",
+    "\n",
+    "with \n",
+    "$ E_0= \\left(eBv/\\sqrt{2m}\\right)^{\\frac{2}{3}}$ and $\\alpha=\\left(\\Delta-\\frac{p_{x}^{2}}{2m}\\right)/E_0$. This Hamiltonian has been exthensively [studied](https://arxiv.org/abs/0907.0500) by G. Montambaux and coworkers and an excellent semiclassical approximation for its spectrum $E_{n,p_x}$ was found \n",
+    "\n",
+    "\\begin{align}\n",
+    "\\frac{3\\pi}{2\\sqrt{2}}\\left(n+\\frac{1}{2}\\right)=\\sqrt{\\epsilon}       \\left(2\\alpha E(x)  +(\\epsilon-\\alpha)K(x)  \\right),\\\\\n",
+    "\\frac{3\\pi}{2}n=\\sqrt{\\alpha+\\epsilon}\\left( \\alpha E\\left ({x}^{-1}\\right)+(\\epsilon-\\alpha)K\\left ({x}^{-1}\\right)\\right),\n",
+    "\\end{align}\n",
+    "\n",
+    "where $K(x)$ and $E(x)$ are the complete elliptic integrals of \n",
+    "the first and second kind, respectively,\n",
+    "$x=(\\epsilon+\\alpha)/2\\epsilon$,  $ \\epsilon=E_{n,p_x}/E_0$, $n$ non-negative integer integer.\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
